# libubox

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE-ISC  README.md  release.toml
.github/workflows/: ci.yml  release.yml
libubox/: Cargo.toml  LICENSE-MIT  README.md
libubox-sys/: Cargo.toml  LICENSE-APACHE  README.md  build.rs  wrapper.h
libubox-sys/src/: lib.rs
libubox-sys/src/bindings/: pregenerated.rs
libubox-sys/tests/: smoke.rs
libubox/examples/: sysinfo.rs
libubox/src/: blob.rs  blobmsg.rs  lib.rs  uloop.rs
libubox/src/blob/: attr.rs
libubox/tests/: blob_roundtrip.rs  smoke.rs
tools/: regen-bindings.sh
