[package]
name          = "libubox-sys"
version       = "0.2.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Raw FFI bindings to OpenWrt's libubox (blob, blobmsg, uloop, avl, ...)."
keywords      = ["openwrt", "ubox", "ubus", "blobmsg", "ffi"]
categories    = ["external-ffi-bindings"]
links         = "ubox"
build         = "build.rs"

include = [
    "src/**/*.rs",
    "build.rs",
    "wrapper.h",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "vendor/libubox/CMakeLists.txt",
    "vendor/libubox/*.c",
    "vendor/libubox/*.h",
    "vendor/libubox/sh/*.sh",
    # Required even with BUILD_LUA=OFF / BUILD_EXAMPLES=OFF: CMake's
    # add_subdirectory() validates the directory exists at parse time,
    # before the option takes effect.
    "vendor/libubox/lua/CMakeLists.txt",
    "vendor/libubox/examples/CMakeLists.txt",
]

[features]
default = []
json    = ["dep:pkg-config"]
bindgen = ["dep:bindgen"]
static  = []

[build-dependencies]
cmake      = "0.1.51"
pkg-config = { version = "0.3.30", optional = true }
bindgen    = { version = "0.70",   optional = true }

[package.metadata.docs.rs]
features = ["json"]
